--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
+GOOGLE_MAP_KEY= AIzaSyDiH0vG1nt_XWva_v5FJ2g3mXbhWSjMurg
+RAPID_API= 663ed16467msh1ed53f20c93dbe0p108d40jsn4109711d33eb
